--- a/.github/workflows/deploy-widget-stage.yml
+++ b/.github/workflows/deploy-widget-stage.yml
@@ -11,11 +11,11 @@ on:
   push:
     branches:
       - main
+      - chai/widget-fixes
     paths:
       - 'widget/**'
       - '.github/workflows/deploy-widget-stage.yml'
       - 'widget/Dockerfile'
-      - chai/deploy-widget
 
 permissions:
   id-token: write
