--- a/.github/workflows/deploy-widget-stage.yml
+++ b/.github/workflows/deploy-widget-stage.yml
@@ -95,7 +95,7 @@ jobs:
           build-args: |
             NODE_ENV=production
             NEXT_PUBLIC_SITE_URL=https://stage.roommitra.com
-            NEXT_PUBLIC_SOCKET_IO_URL=wss://api-stage.roommitra.com
+            NEXT_PUBLIC_WEB_VOICE_AGENT_SOCKET_IO_URL=wss://api-stage.roommitra.com/web-voice-agent
           tags: |
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:${{ env.IMAGE_TAG }}
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:stage
