--- a/.github/workflows/deploy-api-stage.yml
+++ b/.github/workflows/deploy-api-stage.yml
@@ -11,6 +11,7 @@ on:
   push:
     branches:
       - main
+      - adi/pwa-5
     paths:
       - 'api/**'
       - '.github/workflows/deploy-api-stage.yml'
