--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -93,6 +93,7 @@ jobs:
           push: true
           provenance: false
           build-args: |
+            ENV=production
             NODE_ENV=production
             NEXT_PUBLIC_SITE_URL=https://roommitra.com
           tags: |
