--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -96,6 +96,9 @@ jobs:
             ENV=production
             NODE_ENV=production
             NEXT_PUBLIC_SITE_URL=https://roommitra.com
+            NEXT_PUBLIC_WIDGET_BASE_URL=https://widget.roommitra.com
+            NEXT_PUBLIC_DEMO_HOTEL_ID=01K8A5C7YAK0XAXAZBHJN9NVTS
+            NEXT_PUBLIC_DEMO_WIDGET_SIGNATURE=WJOeFcWSaHFeUlG1btkmtxQH9Dz4q8OqY3yO9P36sj0
           tags: |
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:${{ env.IMAGE_TAG }}
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:release
