--- a/.github/workflows/deploy-widget.yml
+++ b/.github/workflows/deploy-widget.yml
@@ -94,7 +94,8 @@ jobs:
           provenance: false
           build-args: |
             NODE_ENV=production
-            NEXT_PUBLIC_SITE_URL=https://roommitra.com
+            NEXT_PUBLIC_DEMO_HOTEL_ID=01K8A5C7YAK0XAXAZBHJN9NVTS
+            NEXT_PUBLIC_DEMO_WIDGET_SIGNATURE=WJOeFcWSaHFeUlG1btkmtxQH9Dz4q8OqY3yO9P36sj0
             NEXT_PUBLIC_WEB_VOICE_AGENT_SOCKET_IO_URL=wss://api.roommitra.com/web-voice-agent
           tags: |
             public.ecr.aws/${{ env.PUBLIC_ECR_ALIAS }}/${{ env.PUBLIC_ECR_REPO }}:${{ env.IMAGE_TAG }}
