--- a/widget/Dockerfile
+++ b/widget/Dockerfile
@@ -11,10 +11,13 @@ COPY package.json package-lock.json* ./
 RUN npm ci --include=dev
 
 # Public envs for Next to bake into the build
-ARG NEXT_PUBLIC_SITE_URL
-ENV NEXT_PUBLIC_SITE_URL=$NEXT_PUBLIC_SITE_URL
 
+ARG NEXT_PUBLIC_DEMO_HOTEL_ID
+ARG NEXT_PUBLIC_DEMO_WIDGET_SIGNATURE
 ARG NEXT_PUBLIC_WEB_VOICE_AGENT_SOCKET_IO_URL
+
+ENV NEXT_PUBLIC_DEMO_HOTEL_ID=$NEXT_PUBLIC_DEMO_HOTEL_ID
+ENV NEXT_PUBLIC_DEMO_WIDGET_SIGNATURE=$NEXT_PUBLIC_DEMO_WIDGET_SIGNATURE
 ENV NEXT_PUBLIC_WEB_VOICE_AGENT_SOCKET_IO_URL=$NEXT_PUBLIC_WEB_VOICE_AGENT_SOCKET_IO_URL
 
 # Build
