--- a/.github/workflows/slack-release-commit.yml
+++ b/.github/workflows/slack-release-commit.yml
@@ -15,6 +15,15 @@ jobs:
           echo "SHORT_SHA=${GITHUB_SHA::8}" >> $GITHUB_ENV
           echo "COMMIT_URL=https://github.com/${GITHUB_REPOSITORY}/commit/${GITHUB_SHA}" >> $GITHUB_ENV
           echo "AUTHOR_NAME=${{ github.event.head_commit.author.name }}" >> $GITHUB_ENV
+      - name: Prepare commit message for Slack
+        id: sanitize_message
+        run: |
+          # Replace newline characters with literal "\n"
+          msg="${{ github.event.head_commit.message }}"
+          msg="${msg//'%'/'%25'}"
+          msg="${msg//$'\n'/'\n'}"
+          msg="${msg//$'\r'/'\n'}"
+          echo "escaped=$msg" >> $GITHUB_OUTPUT
 
       - name: Send Slack notification
         uses: slackapi/slack-github-action@v1.26.0
@@ -47,7 +56,7 @@ jobs:
                     },
                     {
                       "type": "mrkdwn",
-                      "text": "*Message:*\n${{ github.event.head_commit.message }}"
+                      "text": "*Message:*\n${{ steps.sanitize_message.outputs.escaped }}"
                     }
                   ]
                 },
