--- a/staff-app/package.json
+++ b/staff-app/package.json
@@ -19,12 +19,14 @@
     "expo": "~54.0.25",
     "expo-application": "~7.0.7",
     "expo-background-fetch": "~14.0.8",
+    "expo-background-task": "~1.0.9",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
+    "expo-network": "~8.0.7",
     "expo-notifications": "~0.32.13",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
@@ -42,13 +44,14 @@
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-wifi-reborn": "^4.13.6",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
